fix: download button link to another page. fix: notification covered by teaser image problem

--- a/@antv/gatsby-theme-antv/site/components/Banner.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Banner.module.less
@@ -188,7 +188,7 @@
     display: flex;
     bottom: 40px;
     position: absolute;
-    z-index: 1;
+    z-index: 3;
     margin-left: 4.5%;
   }
   .teaser {
